--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 #Site
-title: 水榭清松-Song Kong
-description: This is Song' home.
+title: Chloe
+description: It's 气味's Space.
 logo: favicon.png
 url: ikongsong.com
 rss_url: /feed.xml
@@ -33,18 +33,18 @@ baidu_analytics: 5b31ffbbdc6cff18727f3adf75a03777    #from //hm.baidu.com/hm.js?
 
 # Author information:
 author:
-  #resume: /resume
-  name: Song Kong     #the name of Blog section
-  about_me: I'm Song Kong. This is my online home & blog, where I share thoughts about front-end development, cloud computing, my daily life and other insteresting topics. Feel free to contact me by email if you have any question.
+  resume: /resume
+  name: Chloe     #the name of Blog section
+  about_me: 可以了！！
  
 # Social Links
-email:               hi@ikongsong.com
+email:               njycgqw@163.com
 #google.plus:        username
 #twitter:            username
-facebook:            kongsong
-github:              songkong
-stackoverflow:      6438519/song-kong   #from a "http://stackoverflow.com/users/123456/username" link
-linkedin:           kongsong
+#facebook:            username
+github:              chloceg
+#stackoverflow:      6438519/song-kong   #from a "http://stackoverflow.com/users/123456/username" link
+#linkedin:           kongsong
 #xing:              username
 #instagram:          username
 #lastfm:            username
