--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Chloe
 description: It's 气味's Space.
 logo: favicon.png
-url: ikongsong.com
-rss_url: /feed.xml
+url: chloceg.github.io
+#rss_url: /feed.xml
 
 # Jekyll
 permalink:          /blog/:title/
@@ -21,7 +21,7 @@ sass:
 
 # Comment
 comment:
-  disqus: kongsong    
+  #disqus: kongsong    
   # duoshuo: kongsong
   # youyan: 2122392
   # laibili: MTAyMC8yODgzNC81NDA0
@@ -44,7 +44,7 @@ email:               njycgqw@163.com
 #facebook:            username
 github:              chloceg
 #stackoverflow:      6438519/song-kong   #from a "http://stackoverflow.com/users/123456/username" link
-#linkedin:           kongsong
+#linkedin:           username
 #xing:              username
 #instagram:          username
 #lastfm:            username
