--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@ author: Chloe
 baseurl: /chloceg.github.io
 description: Chloe's Site
 github: http://www.github.com/chloceg
-twitter: http://www.twitter.com/
+twitter: http://www.twitter.com/nanjingmengwang
 facebook: http://www.facebook.com
 linkedin: http://www.linkedin.com
 email: njycgqw@163.com
-location: 42°2'16"N   70°12'45"W
+location: Nanjing
 disqus: Chloe
 
 ##Make sure to edit the above fields, especially for disqus.
