--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: 气味小站
 author: Chloe
-baseurl: /chloceg.github.io
+baseurl: /
 description: Chloe's Site
 github: http://www.github.com/chloceg
 twitter: http://www.twitter.com/nanjingmengwang
